# uv-aio-template

./: .gitignore  .pre-commit-config.yaml  404.html  Dockerfile  README.md  index.html  justfile  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  tox.ini
.github/actions/setup-python-env/: action.yml
.github/workflows/: main.yml  on-release-main.yml
docs/: index.md  modules.md
modules/: index.html
search/: search_index.json
tests/: test_foo.py
